--- a/WebMXH/Views/Home/Profiles.cshtml
+++ b/WebMXH/Views/Home/Profiles.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@using WebMXH.Models;
+@model dynamic
 @{
     ViewBag.Title = "Profiles";
+    USERR user = Session["user"] as USERR;
 }
-@model List<BAIVIET>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="~/Content/assets/css/style.css">
     <!-- Emoji CSS -->
     <link rel="stylesheet" href="~/Content/assets/css/emojionearea.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" />
     <!-- Fontawesome CSS -->
     <link rel="stylesheet" href="~/Content/assets/fonts/fontawesome-free-5.15.3-web/css/all.min.css">
 </head>
@@ -116,6 +118,7 @@
             <img class="img-profile" src="~/Content/assets/img/@GetImage(int.Parse(User.Identity.Name))" alt="">
             <div class="img-icon">
                 <i class="fas fa-camera"></i>
+                @*<input type="file" name="filename" id="filename" />*@
             </div>
             <div class="img-info">
                 <span>@GetUsername(int.Parse(User.Identity.Name))</span>
@@ -129,10 +132,12 @@
             <li class="item-activity">Bạn bè</li>
             <li class="item-activity">Ảnh</li>
             <li style="margin-top:7px;">
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <a href="@Url.Action("EditProfile/"+GetUserId(int.Parse(User.Identity.Name)),"Home")" class="profile-btn btn btn-primary">Chỉnh sửa trang cá nhân</a>
-                }
+                @*@if (User.Identity.IsAuthenticated)
+                    {
+                        <a href="@Url.Action("EditProfile/"+GetUserId(int.Parse(User.Identity.Name)),"Home")" class="profile-btn btn btn-primary">Chỉnh sửa trang cá nhân</a>
+
+                    }*@
+                <a id="openModal" class="profile-btn btn btn-primary">Chỉnh sửa trang cá nhân</a>
             </li>
         </ul>
     </div>
@@ -221,7 +226,7 @@
                         {
                             @Html.AntiForgeryToken()
                             <!-- Bài viết đã đăng nên phần này chỉ hiển thị lấy từ DB ra hiển thị  -->
-                            foreach (var item in Model)
+                            foreach (BAIVIET item in Model.baiviet)
                             {
                                 <div class="profile-posted">
                                     <div class="middle-list-postedUser">
@@ -275,14 +280,13 @@
                                 </div>
                             }
                         }
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- End content -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -295,6 +299,133 @@
         }
         closing.onclick = function () {
             accountUserSetting.style.display = 'none';
+        }
+    </script>
+
+    <div class="modal" id="modalEdit" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Cập nhật thông tin</h5>
+                    <button type="button" id="closeModalUpdate" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div id="modal-bodys" style="overflow-y:scroll;height:320px;" class="modal-body">
+                    <div class="form-group">
+                        <a style="margin-left: 16px; text-transform: uppercase; font-weight: bold; ">Tên đăng nhập</a>
+                        <div class="col-md-10">
+                            @Html.EditorFor(USERR => user.USERNAME, new { htmlAttributes = new { @id = "username_input", @class = "form-control", @style = "width:435;" } })
+                            @Html.ValidationMessageFor(USERR => user.USERNAME, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <a style="margin-left: 16px; text-transform: uppercase; font-weight: bold; ">Họ và tên</a>
+                        <div class="col-md-10">
+                            @Html.EditorFor(USERR => user.FULLNAME, new { htmlAttributes = new { @id = "fullname_input", @class = "form-control", @style = "width:435;" } })
+                            @Html.ValidationMessageFor(USERR => user.FULLNAME, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <a style="margin-left: 16px; text-transform: uppercase; font-weight: bold; ">Mật khẩu</a>
+                        <div class="col-md-10">
+                            @Html.EditorFor(USERR => user.PASSWORD, new { htmlAttributes = new { @id = "password_input", @class = "form-control", @style = "width:435;" } })
+                            @Html.ValidationMessageFor(USERR => user.PASSWORD, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <a style="margin-left: 16px; text-transform: uppercase; font-weight: bold; ">Số điện thoại</a>
+                        <div class="col-md-10">
+                            @Html.EditorFor(USERR => user.SDT, new { htmlAttributes = new { @id = "sdt_input", @class = "form-control", @style = "width:435;" } })
+                            @Html.ValidationMessageFor(USERR => user.SDT, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <a style="margin-left: 16px; text-transform: uppercase; font-weight: bold; ">Email</a>
+                        <div class="col-md-10">
+                            @Html.EditorFor(USERR => user.EMAIL, new { htmlAttributes = new { @id = "email_input", @class = "form-control", @style = "width:435;" } })
+                            @Html.ValidationMessageFor(USERR => user.EMAIL, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <a style="margin-left: 16px; text-transform: uppercase; font-weight: bold; ">Giới tính</a>
+                        <div class="col-md-10">
+                            <select id="select_gioitinh">
+                                <option value="Nam">Nam</option>
+                                <option value="Nữ">Nữ</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <a style="margin-left: 16px; text-transform: uppercase; font-weight: bold; ">Ngày sinh</a>
+                        <div class="col-md-10">
+                            @Html.EditorFor(USERR => user.NGAYSINH, new { htmlAttributes = new { @id = "ngaysinh_input", @class = "form-control", @style = "width:435;" } })
+                            @Html.ValidationMessageFor(USERR => user.NGAYSINH, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" id="SaveEdit" class="btn btn-primary">Lưu thông tin</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Huỷ</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script>
+        var closeModalUpdate = document.querySelector("#closeModalUpdate");
+        var openModal = document.querySelector("#openModal");
+
+        openModal.onclick = function () {
+            modalEdit.style.display = 'block';
+        }
+
+        closeModalUpdate.onclick = function () {
+            modalEdit.style.display = 'none';
+        }
+
+        //Save thông tin khi user mới tạo tài khoản
+        var Save = document.querySelector('#SaveEdit');
+        Save.onclick = function () {
+            var emp = $('#ngaysinh_input').val();
+            var select = $('#select_gioitinh').val();
+            var username = $('#username_input').val();
+            var fullname = $('#fullname_input').val();
+            var pass = $('#password_input').val();
+            var sdt = $('#sdt_input').val();
+            var email = $('#email_input').val();
+            $.ajax({
+                url: '/Home/EditInfoUser',
+                type: 'POST',
+                datatype: 'JSON',
+                contentType: 'application/json;charset=utf-8;',
+                data: JSON.stringify({ ngaysinh: emp, gioitinh: select, username: username, fullname: fullname, pass: pass, sdt: sdt, email: email}),
+                async: true,
+                success: function (res) {
+                    if (res == 1) {
+                        swal({
+                            title: "Thông báo",
+                            text: "Thông tin của bạn cập nhật thành công",
+                            type: "success",
+                            confirmButtonClass: "btn-primary",
+                            confirmButtonText: "OK",
+                            closeOnConfirm: true,
+                        }, function (isConfirm) {
+                            if (isConfirm) {
+                                location.reload();
+                            }
+                        })
+
+                    }
+                    else
+                        alert('Sửa không thành công');
+                }
+            });
         }
     </script>
 </body>
